--- a/index.html
+++ b/index.html
@@ -1527,7 +1527,7 @@ button[type="submit"]:hover {
         <!-- END R stripe -->
 
         <div id="Background7" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/Background7.webp" alt="Background7" id="__11" fetchpriority="high" decoding="async">
+            <img src="https://github.com/nexthighestlevel/edim/blob/main/images/idea/Background7.webp" alt="Background7" id="__11" fetchpriority="high" decoding="async">
         </div>
         <div id="testimonial" class="pointer-events-none">
             <img src="https://www.nexthighestlevel.com/images/idea/testimonialV25.webp" alt="testimonial" id="__12" loading="lazy" decoding="async">
