--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 "name": "Next Highest Level Group",
 "logo": {
 "@type": "ImageObject",
-"url": "https://www.nexthighestlevel.com/favicon.webp"
+"url": "images/favicon.webp"
 }
 }
 }
@@ -37,7 +37,7 @@
     <!-- END JSON-LD -->
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://www.nexthighestlevel.com/favicon.webp">
+    <link rel="icon" type="image/png" href="images/favicon.webp">
 
     <!-- HTML Tag untuk Google Search Console -->
     <!-- END HTML Tag untuk Google Search Console -->
@@ -1272,31 +1272,31 @@ button[type="submit"]:hover {
         </div>
         <span id="_429_12"><span id="__0" class="text">Auto download immediately after continuing, choose the option, <br id="__1">and check your email it will auto download in 24 hours.</span></span>
         <div id="TRUST_THE_PROCESS_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/TRUST-THE-PROCESS.webp" alt="TRUST THE PROCESS 1" id="__2" loading="lazy" decoding="async">
+            <img src="images/idea/TRUST-THE-PROCESS.webp" alt="TRUST THE PROCESS 1" id="__2" loading="lazy" decoding="async">
         </div>
         <div id="metric" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/metric.webp" alt="metric" id="__3" loading="lazy" decoding="async">
+            <img src="images/idea/metric.webp" alt="metric" id="__3" loading="lazy" decoding="async">
         </div>
         <div id="hiasan" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/hiasanpppp.webp" alt="hiasan" id="__4" loading="lazy" decoding="async">
+            <img src="images/idea/hiasanpppp.webp" alt="hiasan" id="__4" loading="lazy" decoding="async">
         </div>
         <div id="modelidea" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/modelideapp.webp" alt="modelidea" id="__5" loading="lazy" decoding="async">
+            <img src="images/idea/modelideapp.webp" alt="modelidea" id="__5" loading="lazy" decoding="async">
         </div>
         <div id="chooseidea" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/chooseideapp.webp" alt="chooseidea" id="__6" loading="lazy" decoding="async">
+            <img src="images/idea/chooseideapp.webp" alt="chooseidea" id="__6" loading="lazy" decoding="async">
         </div>
         <div id="devidea" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/devideapp.webp" alt="devidea" id="__7" loading="lazy" decoding="async">
+            <img src="images/idea/devideapp.webp" alt="devidea" id="__7" loading="lazy" decoding="async">
         </div>
         <div id="gallery" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/gallery.webp" alt="gallery" id="__8" loading="lazy" decoding="async">
+            <img src="images/idea/gallery.webp" alt="gallery" id="__8" loading="lazy" decoding="async">
         </div>
         <div id="visi" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/visi.webp" alt="visi" id="__9" loading="lazy" decoding="async">
+            <img src="images/idea/visi.webp" alt="visi" id="__9" loading="lazy" decoding="async">
         </div>
         <div id="Plan" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/PlanV46.webp" alt="Plan" id="__10" loading="lazy" decoding="async">
+            <img src="images/idea/PlanV46.webp" alt="Plan" id="__10" loading="lazy" decoding="async">
         </div>
 
         <!-- START Free Plan -->
@@ -1530,29 +1530,29 @@ button[type="submit"]:hover {
             <img src="images/idea/Background7.webp" alt="Background7" id="__11" fetchpriority="high" decoding="async">
         </div>
         <div id="testimonial" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/testimonialV25.webp" alt="testimonial" id="__12" loading="lazy" decoding="async">
+            <img src="images/idea/testimonialV25.webp" alt="testimonial" id="__12" loading="lazy" decoding="async">
         </div>
         <div id="bar_head" class="pointer-events-none">
         </div>
         <div id="Group_5">
             <div id="book_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/idea/book.webp" alt="book 1" id="__13" fetchpriority="high" decoding="async">
+                <img src="images/idea/book.webp" alt="book 1" id="__13" fetchpriority="high" decoding="async">
             </div>
             <a href="/" id="_581_8"><span id="__14" class="text">idea</span></a>
             <div id="freegift" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/idea/freegiftpp.webp" alt="freegift" id="__15" fetchpriority="high" decoding="async">
+                <img src="images/idea/freegiftpp.webp" alt="freegift" id="__15" fetchpriority="high" decoding="async">
             </div>
             <a href="/free-gift" id="_581_10"><span id="__16" class="text">FREE GIFT</span></a>
             <div id="green_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/idea/green.webp" alt="green 1" id="__17" fetchpriority="high" decoding="async">
+                <img src="images/idea/green.webp" alt="green 1" id="__17" fetchpriority="high" decoding="async">
             </div>
             <a href="/news" id="_581_12"><span id="__18" class="text">NEWS</span></a>
             <a href="/" id="logo_small_1">
-        <img src="https://www.nexthighestlevel.com/images/idea/logobar.webp" alt="logo-small 1" id="__19" fetchpriority="high" decoding="async">
+        <img src="images/idea/logobar.webp" alt="logo-small 1" id="__19" fetchpriority="high" decoding="async">
       </a>
         </div>
         <div id="feeter" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/feeter.webp" alt="feeter" id="__20" loading="lazy" decoding="async">
+            <img src="images/idea/feeter.webp" alt="feeter" id="__20" loading="lazy" decoding="async">
         </div>
         <div id="End_filter_backgroud" class="pointer-events-none">
         </div>
@@ -1568,15 +1568,15 @@ button[type="submit"]:hover {
         </div>
         <div id="Group_30">
             <div id="book_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/idea/book.webp" alt="book 1" id="__24" loading="lazy" decoding="async">
+                <img src="images/idea/book.webp" alt="book 1" id="__24" loading="lazy" decoding="async">
             </div>
             <a href="/" id="_545_124"><span id="__25" class="text">idea</span></a>
             <div id="freegift_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/idea/freegiftpp.webp" alt="freegift" id="__26" loading="lazy" decoding="async">
+                <img src="images/idea/freegiftpp.webp" alt="freegift" id="__26" loading="lazy" decoding="async">
             </div>
             <a href="/free-gift" id="_545_126"><span id="__27" class="text">FREE GIFT</span></a>
             <div id="green_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/idea/green.webp" alt="green 1" id="__28" loading="lazy" decoding="async">
+                <img src="images/idea/green.webp" alt="green 1" id="__28" loading="lazy" decoding="async">
             </div>
             <a href="/news" id="_545_128"><span id="__29" class="text">NEWS</span></a>
         </div>
@@ -1586,7 +1586,7 @@ button[type="submit"]:hover {
             <a href="/disclaimer" id="_545_132"><span id="__32" class="text">Disclaimer</span></a>
         </div>
         <div id="info_2" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/idea/infopppp.webp" alt="info 2" id="__33" fetchpriority="high" decoding="async">
+            <img src="images/idea/infopppp.webp" alt="info 2" id="__33" fetchpriority="high" decoding="async">
         </div>
     </div>
     
