--- a/free-gift.html
+++ b/free-gift.html
@@ -46,7 +46,7 @@
         <!-- END JSON-LD -->
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://www.nexthighestlevel.com/favicon.webp">
+    <link rel="icon" type="image/png" href="images/favicon.webp">
 
     <!-- HTML Tag untuk Google Search Console -->
     <!-- END HTML Tag untuk Google Search Console -->
@@ -976,40 +976,40 @@
 <body id="_">
     <div id="Free_Gift">
         <div id="freegift_png_2" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/free-gift/fgboardpp.webp" alt="freegift.png 2" id="__0" fetchpriority="high" decoding="async">
+            <img src="images/free-gift/fgboardpp.webp" alt="freegift.png 2" id="__0" fetchpriority="high" decoding="async">
         </div>
         <div id="background_end" class="pointer-events-none">
         </div>
         <div id="ebooks_3" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/free-gift/fgebookspp.webp" alt="ebooks 3" id="__1" fetchpriority="high" decoding="async">
+            <img src="images/free-gift/fgebookspp.webp" alt="ebooks 3" id="__1" fetchpriority="high" decoding="async">
         </div>
         <div id="moregift_2" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/free-gift/fgmoregiftpp.webp" alt="moregift 2" id="__2" loading="lazy" decoding="async">
+            <img src="images/free-gift/fgmoregiftpp.webp" alt="moregift 2" id="__2" loading="lazy" decoding="async">
         </div>
         <div id="hiasan2" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/free-gift/fghiasanpp.webp" alt="hiasan2" id="__3" loading="lazy" decoding="async">
+            <img src="images/free-gift/fghiasanpp.webp" alt="hiasan2" id="__3" loading="lazy" decoding="async">
         </div>
         <div id="bar_head" class="pointer-events-none">
         </div>
         <div id="Group_5">
             <div id="book_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/free-gift/book.webp" alt="book 1" id="__4" fetchpriority="high" decoding="async">
+                <img src="images/free-gift/book.webp" alt="book 1" id="__4" fetchpriority="high" decoding="async">
             </div>
             <a href="/" id="_462_32"><span id="__5" class="text">idea</span></a>
             <div id="freegift" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/free-gift/freegiftpp.webp" alt="freegift" id="__6" fetchpriority="high" decoding="async">
+                <img src="images/free-gift/freegiftpp.webp" alt="freegift" id="__6" fetchpriority="high" decoding="async">
             </div>
             <a href="/free-gift" id="_462_34"><span id="__7" class="text">FREE GIFT</span></a>
             <div id="green_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/free-gift/green.webp" alt="green 1" id="__8" fetchpriority="high" decoding="async">
+                <img src="images/free-gift/green.webp" alt="green 1" id="__8" fetchpriority="high" decoding="async">
             </div>
             <a href="/news" id="_462_36"><span id="__9" class="text">NEWS</span></a>
             <a href="/" id="logo_small_1">
-        <img src="https://www.nexthighestlevel.com/images/free-gift/logobar.webp" alt="logo-small 1" id="__10" fetchpriority="high" decoding="async">
+        <img src="images/free-gift/logobar.webp" alt="logo-small 1" id="__10" fetchpriority="high" decoding="async">
       </a>
         </div>
         <div id="feeter" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/free-gift/feeter.webp" alt="feeter" id="__11" loading="lazy" decoding="async">
+            <img src="images/free-gift/feeter.webp" alt="feeter" id="__11" loading="lazy" decoding="async">
         </div>
         <div id="End_filter_backgroud" class="pointer-events-none">
         </div>
@@ -1025,15 +1025,15 @@
         </div>
         <div id="Group_30">
             <div id="book_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/free-gift/book.webp" alt="book 1" id="__15" loading="lazy" decoding="async">
+                <img src="images/free-gift/book.webp" alt="book 1" id="__15" loading="lazy" decoding="async">
             </div>
             <a href="/" id="_581_65"><span id="__16" class="text">idea</span></a>
             <div id="freegift_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/free-gift/freegiftpp.webp" alt="freegift" id="__17" loading="lazy" decoding="async">
+                <img src="images/free-gift/freegiftpp.webp" alt="freegift" id="__17" loading="lazy" decoding="async">
             </div>
             <a href="/free-gift" id="_581_67"><span id="__18" class="text">FREE GIFT</span></a>
             <div id="green_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/free-gift/green.webp" alt="green 1" id="__19" loading="lazy" decoding="async">
+                <img src="images/free-gift/green.webp" alt="green 1" id="__19" loading="lazy" decoding="async">
             </div>
             <a href="/news" id="_581_69"><span id="__20" class="text">NEWS</span></a>
         </div>
