--- a/news.html
+++ b/news.html
@@ -60,7 +60,7 @@
 
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://www.nexthighestlevel.com/favicon.webp">
+    <link rel="icon" type="image/png" href="images/favicon.webp">
 
     <!-- HTML Tag Google Search Console -->
     <!-- END HTML Tag Google Search Console -->
@@ -1307,35 +1307,35 @@
         <div id="background_end" class="pointer-events-none">
         </div>
         <div id="terpilih_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/background-news.webp" alt="terpilih 1" id="__0" fetchpriority="high" decoding="async">
+            <img src="images/news/background-news.webp" alt="terpilih 1" id="__0" fetchpriority="high" decoding="async">
         </div>
         <div id="hiasan-news" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/hiasan-news.webp" alt="hiasan-news" id="__1" loading="lazy" decoding="async">
+            <img src="images/news/hiasan-news.webp" alt="hiasan-news" id="__1" loading="lazy" decoding="async">
         </div>
         <div id="Location" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/LocationV30.webp" alt="Location" id="__2" loading="lazy" decoding="async">
+            <img src="images/news/LocationV30.webp" alt="Location" id="__2" loading="lazy" decoding="async">
         </div>
         <div id="bar_head" class="pointer-events-none">
         </div>
         <div id="Group_22">
             <div id="book_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/news/book.webp" alt="book 1" id="__3" fetchpriority="high" decoding="async">
+                <img src="images/news/book.webp" alt="book 1" id="__3" fetchpriority="high" decoding="async">
             </div>
             <a href="/" id="_581_48"><span id="__4" class="text">idea</span></a>
             <div id="freegift" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/news/freegiftpp.webp" alt="freegift" id="__5" fetchpriority="high" decoding="async">
+                <img src="images/news/freegiftpp.webp" alt="freegift" id="__5" fetchpriority="high" decoding="async">
             </div>
             <a href="/free-gift" id="_581_50"><span id="__6" class="text">FREE GIFT</span></a>
             <div id="green_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/news/green.webp" alt="green 1" id="__7" fetchpriority="high" decoding="async">
+                <img src="images/news/green.webp" alt="green 1" id="__7" fetchpriority="high" decoding="async">
             </div>
             <a href="/news" id="_581_52"><span id="__8" class="text">NEWS</span></a>
             <a href="/" id="logo_small_1">
-        <img src="https://www.nexthighestlevel.com/images/news/logobar.webp" alt="logo-small 1" id="__9" fetchpriority="high" decoding="async">
+        <img src="images/news/logobar.webp" alt="logo-small 1" id="__9" fetchpriority="high" decoding="async">
       </a>
         </div>
         <div id="feeter" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/feeter.webp" alt="feeter" id="__10" loading="lazy" decoding="async">
+            <img src="images/news/feeter.webp" alt="feeter" id="__10" loading="lazy" decoding="async">
         </div>
         <div id="End_filter_backgroud" class="pointer-events-none">
         </div>
@@ -1351,15 +1351,15 @@
         </div>
         <div id="Group_34">
             <div id="book_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/news/book.webp" alt="book 1" id="__14" loading="lazy" decoding="async">
+                <img src="images/news/book.webp" alt="book 1" id="__14" loading="lazy" decoding="async">
             </div>
             <a href="/" id="_581_85"><span id="__15" class="text">idea</span></a>
             <div id="freegift_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/news/freegiftpp.webp" alt="freegift" id="__16" loading="lazy" decoding="async">
+                <img src="images/news/freegiftpp.webp" alt="freegift" id="__16" loading="lazy" decoding="async">
             </div>
             <a href="/free-gift/" id="_581_87"><span id="__17" class="text">FREE GIFT</span></a>
             <div id="green_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/news/green.webp" alt="green 1" id="__18" loading="lazy" decoding="async">
+                <img src="images/news/green.webp" alt="green 1" id="__18" loading="lazy" decoding="async">
             </div>
             <a href="/news" id="_581_89"><span id="__19" class="text">NEWS</span></a>
         </div>
@@ -1372,49 +1372,49 @@
             <span id="_595_9" class="pointer-events-none"><span id="__23" class="text">Card Access Only</span></span>
         </div>
         <div id="card_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/card.webp" alt="card 1" id="__24" fetchpriority="high" decoding="async">
+            <img src="images/news/card.webp" alt="card 1" id="__24" fetchpriority="high" decoding="async">
         </div>
         <div id="newsbarV31" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/newsbarV32.webp" alt="newsbarV31" id="__25" fetchpriority="high" decoding="async">
+            <img src="images/news/newsbarV32.webp" alt="newsbarV31" id="__25" fetchpriority="high" decoding="async">
         </div>
         <div id="news1_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/news1.webp" alt="news1 1" id="__26" loading="lazy" decoding="async">
+            <img src="images/news/news1.webp" alt="news1 1" id="__26" loading="lazy" decoding="async">
         </div>
         <div id="news2_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/news2.webp" alt="news2 1" id="__27" loading="lazy" decoding="async">
+            <img src="images/news/news2.webp" alt="news2 1" id="__27" loading="lazy" decoding="async">
         </div>
         <div id="news3_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/news3.webp" alt="news3 1" id="__28" loading="lazy" decoding="async">
+            <img src="images/news/news3.webp" alt="news3 1" id="__28" loading="lazy" decoding="async">
         </div>
         <div id="news4_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/news4.webp" alt="news4 1" id="__29" loading="lazy" decoding="async">
+            <img src="images/news/news4.webp" alt="news4 1" id="__29" loading="lazy" decoding="async">
         </div>
         <div id="news5_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/news5.webp" alt="news5 1" id="__30" loading="lazy" decoding="async">
+            <img src="images/news/news5.webp" alt="news5 1" id="__30" loading="lazy" decoding="async">
         </div>
         <div id="news6_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/news6.webp" alt="news6 1" id="__31" loading="lazy" decoding="async">
+            <img src="images/news/news6.webp" alt="news6 1" id="__31" loading="lazy" decoding="async">
         </div>
         <div id="news7_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/news7.webp" alt="news7 1" id="__32" loading="lazy" decoding="async">
+            <img src="images/news/news7.webp" alt="news7 1" id="__32" loading="lazy" decoding="async">
         </div>
         <div id="news_line_1" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/newsline6xv2.webp" alt="news line 1" id="__33" loading="lazy" decoding="async">
+            <img src="images/news/newsline6xv2.webp" alt="news line 1" id="__33" loading="lazy" decoding="async">
         </div>
         <div id="news_line_3" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/newsline6xv2.webp" alt="news line 3" id="__34" loading="lazy" decoding="async">
+            <img src="images/news/newsline6xv2.webp" alt="news line 3" id="__34" loading="lazy" decoding="async">
         </div>
         <div id="news_line_8" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/newsline6xv2.webp" alt="news line 8" id="__35" loading="lazy" decoding="async">
+            <img src="images/news/newsline6xv2.webp" alt="news line 8" id="__35" loading="lazy" decoding="async">
         </div>
         <div id="news_line_9" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/newsline6xv2.webp" alt="news line 9" id="__36" loading="lazy" decoding="async">
+            <img src="images/news/newsline6xv2.webp" alt="news line 9" id="__36" loading="lazy" decoding="async">
         </div>
         <div id="news_line_10" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/newsline6xv2.webp" alt="news line 10" id="__37" loading="lazy" decoding="async">
+            <img src="images/news/newsline6xv2.webp" alt="news line 10" id="__37" loading="lazy" decoding="async">
         </div>
         <div id="news_line_11" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/news/newsline6xv2.webp" alt="news line 11" id="__38" loading="lazy" decoding="async">
+            <img src="images/news/newsline6xv2.webp" alt="news line 11" id="__38" loading="lazy" decoding="async">
         </div>
     </div>
     
