--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="icon" type="image/webp" href="https://www.nexthighestlevel.com/favicon.webp">
+    <link rel="icon" type="image/webp" href="images/favicon.webp">
 
     <title>Privacy Policy</title>
     <link rel="canonical" href="https://www.nexthighestlevel.com/privacy-policy">
@@ -840,19 +840,19 @@
         </div>
         <div id="Group_20">
             <div id="book_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/privacy-policy/book.webp" alt="book 1" id="__0" fetchpriority="high" decoding="async">
+                <img src="images/privacy-policy/book.webp" alt="book 1" id="__0" fetchpriority="high" decoding="async">
             </div>
             <a href="/" id="_581_28"><span id="__1" class="text">idea</span></a>
             <div id="freegift" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/privacy-policy/freegiftpp.webp" alt="freegift" id="__2" fetchpriority="high" decoding="async">
+                <img src="images/privacy-policy/freegiftpp.webp" alt="freegift" id="__2" fetchpriority="high" decoding="async">
             </div>
             <a href="/free-gift" id="_581_30"><span id="__3" class="text">FREE GIFT</span></a>
             <div id="green_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/privacy-policy/green.webp" alt="green 1" id="__4" fetchpriority="high" decoding="async">
+                <img src="images/privacy-policy/green.webp" alt="green 1" id="__4" fetchpriority="high" decoding="async">
             </div>
             <a href="/news" id="_581_32"><span id="__5" class="text">NEWS</span></a>
             <a href="/" id="logo_small_1">
-        <img src="https://www.nexthighestlevel.com/images/privacy-policy/logobar.webp" alt="logo-small 1" id="__6" fetchpriority="high" decoding="async">
+        <img src="images/privacy-policy/logobar.webp" alt="logo-small 1" id="__6" fetchpriority="high" decoding="async">
       </a>
         </div>
 
@@ -923,7 +923,7 @@ word-break: break-word !important;
 
 
         <div id="feeter" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/privacy-policy/feeter.webp" alt="feeter" id="__7" loading="lazy" decoding="async">
+            <img src="images/privacy-policy/feeter.webp" alt="feeter" id="__7" loading="lazy" decoding="async">
         </div>
         <div id="End_filter_backgroud" class="pointer-events-none">
         </div>
@@ -939,15 +939,15 @@ word-break: break-word !important;
         </div>
         <div id="Group_42">
             <div id="book_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/privacy-policy/book.webp" alt="book 1" id="__11" loading="lazy" decoding="async">
+                <img src="images/privacy-policy/book.webp" alt="book 1" id="__11" loading="lazy" decoding="async">
             </div>
             <a href="/" id="_581_125"><span id="__12" class="text">idea</span></a>
             <div id="freegift_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/privacy-policy/freegiftpp.webp" alt="freegift" id="__13" loading="lazy" decoding="async">
+                <img src="images/privacy-policy/freegiftpp.webp" alt="freegift" id="__13" loading="lazy" decoding="async">
             </div>
             <a href="/free-gift" id="_581_127"><span id="__14" class="text">FREE GIFT</span></a>
             <div id="green_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/privacy-policy/green.webp" alt="green 1" id="__15" loading="lazy" decoding="async">
+                <img src="images/privacy-policy/green.webp" alt="green 1" id="__15" loading="lazy" decoding="async">
             </div>
             <a href="/news" id="_581_129"><span id="__16" class="text">NEWS</span></a>
         </div>
