--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/webp" href="https://www.nexthighestlevel.com/favicon.webp">
+    <link rel="icon" type="image/webp" href="images/favicon.webp">
 
     <!-- HTML Tag Google Search Console -->
     <!-- END HTML Tag Google Search Console -->
@@ -851,19 +851,19 @@
         </div>
         <div id="Group_19">
             <div id="book_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/terms-and-conditions/book.webp" alt="book 1" id="__0" fetchpriority="high" decoding="async">
+                <img src="images/terms-and-conditions/book.webp" alt="book 1" id="__0" fetchpriority="high" decoding="async">
             </div>
             <a href="/" id="_581_18"><span id="__1" class="text">idea</span></a>
             <div id="freegift" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/terms-and-conditions/freegiftpp.webp" alt="freegift" id="__2" fetchpriority="high" decoding="async">
+                <img src="images/terms-and-conditions/freegiftpp.webp" alt="freegift" id="__2" fetchpriority="high" decoding="async">
             </div>
             <a href="/free-gift" id="_581_20"><span id="__3" class="text">FREE GIFT</span></a>
             <div id="green_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/terms-and-conditions/green.webp" alt="green 1" id="__4" fetchpriority="high" decoding="async">
+                <img src="images/terms-and-conditions/green.webp" alt="green 1" id="__4" fetchpriority="high" decoding="async">
             </div>
             <a href="/news" id="_581_22"><span id="__5" class="text">NEWS</span></a>
             <a href="/" id="logo_small_1">
-        <img src="https://www.nexthighestlevel.com/images/terms-and-conditions/logobar.webp" alt="logo-small 1" id="__6" fetchpriority="high" decoding="async">
+        <img src="images/terms-and-conditions/logobar.webp" alt="logo-small 1" id="__6" fetchpriority="high" decoding="async">
       </a>
         </div>
 
@@ -1016,7 +1016,7 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;"><strong><bdt clas
 
 
         <div id="feeter" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/terms-and-conditions/feeter.webp" alt="feeter" id="__7" loading="lazy" decoding="async">
+            <img src="images/terms-and-conditions/feeter.webp" alt="feeter" id="__7" loading="lazy" decoding="async">
         </div>
         <div id="End_filter_backgroud" class="pointer-events-none">
         </div>
@@ -1032,15 +1032,15 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;"><strong><bdt clas
         </div>
         <div id="Group_38">
             <div id="book_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/terms-and-conditions/book.webp" alt="book 1" id="__11" loading="lazy" decoding="async">
+                <img src="images/terms-and-conditions/book.webp" alt="book 1" id="__11" loading="lazy" decoding="async">
             </div>
             <a href="/" id="_581_105"><span id="__12" class="text">idea</span></a>
             <div id="freegift_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/terms-and-conditions/freegiftpp.webp" alt="freegift" id="__13" loading="lazy" decoding="async">
+                <img src="images/terms-and-conditions/freegiftpp.webp" alt="freegift" id="__13" loading="lazy" decoding="async">
             </div>
             <a href="/free-gift" id="_581_107"><span id="__14" class="text">FREE GIFT</span></a>
             <div id="green_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/terms-and-conditions/green.webp" alt="green 1" id="__15" loading="lazy" decoding="async">
+                <img src="images/terms-and-conditions/green.webp" alt="green 1" id="__15" loading="lazy" decoding="async">
             </div>
             <a href="/news" id="_581_109"><span id="__16" class="text">NEWS</span></a>
         </div>
