--- a/disclaimer.html
+++ b/disclaimer.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="icon" type="image/webp" href="https://www.nexthighestlevel.com/favicon.webp">
+    <link rel="icon" type="image/webp" href="images/favicon.webp">
 
     <title>Disclaimer</title>
     <link rel="canonical" href="https://www.nexthighestlevel.com/disclaimer">
@@ -840,19 +840,19 @@
         </div>
         <div id="Group_21">
             <div id="book_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/disclaimer/book.webp" alt="book 1" id="__0" fetchpriority="high" decoding="async">
+                <img src="images/disclaimer/book.webp" alt="book 1" id="__0" fetchpriority="high" decoding="async">
             </div>
             <a href="/" id="_581_38"><span id="__1" class="text">idea</span></a>
             <div id="freegift" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/disclaimer/freegiftpp.webp" alt="freegift" id="__2" fetchpriority="high" decoding="async">
+                <img src="images/disclaimer/freegiftpp.webp" alt="freegift" id="__2" fetchpriority="high" decoding="async">
             </div>
             <a href="/free-gift" id="_581_40"><span id="__3" class="text">FREE GIFT</span></a>
             <div id="green_1" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/disclaimer/green.webp" alt="green 1" id="__4" fetchpriority="high" decoding="async">
+                <img src="images/disclaimer/green.webp" alt="green 1" id="__4" fetchpriority="high" decoding="async">
             </div>
             <a href="/news" id="_581_42"><span id="__5" class="text">NEWS</span></a>
             <a href="/" id="logo_small_1">
-        <img src="https://www.nexthighestlevel.com/images/disclaimer/logobar.webp" alt="logo-small 1" id="__6" fetchpriority="high" decoding="async">
+        <img src="images/disclaimer/logobar.webp" alt="logo-small 1" id="__6" fetchpriority="high" decoding="async">
       </a>
         </div>
 
@@ -935,7 +935,7 @@ mso-themetint:166;"><bdt class="block-container if" data-type="if"><bdt class="s
 
         
         <div id="feeter" class="pointer-events-none">
-            <img src="https://www.nexthighestlevel.com/images/disclaimer/feeter.webp" alt="feeter" id="__7" fetchpriority="high" decoding="async">
+            <img src="images/disclaimer/feeter.webp" alt="feeter" id="__7" fetchpriority="high" decoding="async">
         </div>
         <div id="End_filter_backgroud" class="pointer-events-none">
         </div>
@@ -951,15 +951,15 @@ mso-themetint:166;"><bdt class="block-container if" data-type="if"><bdt class="s
         </div>
         <div id="Group_46">
             <div id="book_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/disclaimer/book.webp" alt="book 1" id="__11" fetchpriority="high" decoding="async">
+                <img src="images/disclaimer/book.webp" alt="book 1" id="__11" fetchpriority="high" decoding="async">
             </div>
             <a href="/" id="_581_145"><span id="__12" class="text">idea</span></a>
             <div id="freegift_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/disclaimer/freegiftpp.webp" alt="freegift" id="__13" fetchpriority="high" decoding="async">
+                <img src="images/disclaimer/freegiftpp.webp" alt="freegift" id="__13" fetchpriority="high" decoding="async">
             </div>
             <a href="/free-gift" id="_581_147"><span id="__14" class="text">FREE GIFT</span></a>
             <div id="green_1_0" class="pointer-events-none">
-                <img src="https://www.nexthighestlevel.com/images/disclaimer/green.webp" alt="green 1" id="__15" fetchpriority="high" decoding="async">
+                <img src="images/disclaimer/green.webp" alt="green 1" id="__15" fetchpriority="high" decoding="async">
             </div>
             <a href="/news" id="_581_149"><span id="__16" class="text">NEWS</span></a>
         </div>
